k8s/kube-prometheus-stack/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  hostnames:
    - grafana.romaine.life
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: envoy-gateway-system
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: grafana
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
